# CompArch

./: .gitignore  CMakeLists.txt  addressing.cpp  globals.cpp  globals.h  k19.cpp  opcodes.cpp  opcodes.h
p1/: CMakeLists.txt  README  addressing.h  opcodes.cpp
p1/tests/: err-li-i.asm  err-li-i.out  err-li-ix.asm  err-li-ix.out  err-undef.asm  handout.asm  lda-i.asm  lda-i.out  lda-ix.out  lda-x.asm  lda-x.out  test-adda.asm  test-addb.out  test-anda.out  test-andb.asm  test-clra.asm  test-clrb.asm  test-clrb.out  test-coma.asm  test-comb.asm  test-comb.out  test-ema.asm  test-ema.out  test-halt.asm  test-lda.out  test-ldb.asm  test-ldxr.out  test-lib.asm  test-lixr.asm  test-lixr.out  test-ora.out  test-orb.out  test-stb.asm  test-stb.out  test-suba.out  test-subb.asm  test-tna.asm  test-tnb.asm  test-tnb.out  test-tpa.out  (+6 more)
p2/: CMakeLists.txt  addressing.cpp  addressing.h  decode.cpp  decode.h  globals.cpp  globals.h  opcodes.cpp  opcodes.h  pdp11.cpp  setup.cpp
p2/tests/: README  RUN  err_align1.asm  err_align1.lst  err_align1.out  err_align2.asm  err_align2.lst  err_align2.out  err_opcode.asm  err_opcode.lst  err_opcode.out  handout.asm  handout.lst  handout.out  mode_0.asm  mode_0.lst  mode_0.out  mode_1.asm  mode_1.lst  mode_1.out  mode_2.asm  mode_2.lst  mode_2.out  mode_3.asm  mode_3.lst  mode_3.out  mode_4.asm  mode_4.lst  mode_4.out  mode_5.asm  mode_5.lst  mode_5.out  mode_6.asm  mode_6.lst  mode_6.out  mode_7.asm  mode_7.lst  mode_7.out  test_add.asm  test_add.lst  (+97 more)
tests/: err-li-x.asm  err-li-x.out  err-undef.out  handout.out  lda-ix.asm  myRUN.sh  (+33 more)
